ASP.NET Web App boilerplate

--- a/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
+++ b/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>8d31ceeb-bec3-4699-a3cc-223f301e351f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
