--- a/src/aTES/aTES.Identity/aTES.Identity.csproj
+++ b/src/aTES/aTES.Identity/aTES.Identity.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>bdc300d8-4310-4ee2-b361-43a1265789e3</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
