--- a/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
+++ b/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
@@ -7,7 +7,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.11" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
 	</ItemGroup>
 
 </Project>
