--- a/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
+++ b/src/aTES/aTES.TaskTracker/aTES.TaskTracker.csproj
@@ -18,4 +18,8 @@
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\aTES.SchemaRegistry\aTES.SchemaRegistry.csproj" />
+	</ItemGroup>
+
 </Project>
